--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
+		"pre-commit": "npm run lint && npm run format"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.5",
@@ -27,6 +29,7 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"husky": "^9.0.11",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.1"
 	}
