feat: add alias and refactor imports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/components/*": ["./src/components/*"],
+      "~/hooks/*": ["./src/hooks/*"],
+      "~/store/*": ["./src/store/*"],
+      "~/pages/*": ["./src/pages/*"],
+      "~/types/*": ["./src/types/*"],
+      "~/slices/*": ["./src/slices/*"]
+    },
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
